# shell-piper

./: .gitignore  README.md  pyproject.toml
shell_piper/: __init__.py  __main__.py  exe.py  file.py
