[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shell-piper"
authors = [{ name = "Firegem", email = "mrfiregem@protonmail.ch" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Mrfiregem/shell-piper"
Issues = "https://github.com/Mrfiregem/shell-piper/issues"

[project.scripts]
shellpiper = "shell_piper:main"

[project.optional-dependencies]
dev = ["black>=22.12", "flit", "mypy>=0.991", "setuptools>=63.2"]
